<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent"
                                             tools:context=".GlossaryFragment" android:id="@+id/frameLayout2">

    <!-- TODO: Update blank fragment layout -->
    <ImageView
            android:src="@drawable/dbzf_logo_crop"
            android:layout_width="212dp"
            android:layout_height="131dp" android:id="@+id/imageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp" android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintVertical_bias="0.0"/>
    <ScrollView
            android:layout_width="308dp"
            android:layout_height="408dp"
            app:layout_constraintTop_toBottomOf="@+id/imageView" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.494" android:id="@+id/scrollView3">
        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      android:orientation="vertical" android:id="@+id/linearLayout2">
            <TextView
                    android:text="@string/character_lab"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView"
                    android:textSize="36sp"
                    android:textColor="@color/textColor" android:background="@color/btnBackground"
            />
            <Button
                    android:text="@string/fighter_list_btn"
                    android:onClick="openFighterList"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="88dp"
            />
            <Button
                    android:text="@string/team_building"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button2"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="88dp"
            />
            <Button
                    android:text="@string/tier_list"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/button3"
                    tools:layout_conversion_absoluteHeight="48dp"
                    tools:layout_conversion_absoluteWidth="88dp"
            />
            <TextView
                    android:text="@string/fighterz_body"
                    android:layout_width="300dp"
                    android:layout_height="366dp"
                    android:id="@+id/textView4"
                    android:textColor="@color/textColor"/>
        </LinearLayout>
    </ScrollView>


</android.support.constraint.ConstraintLayout>